changed the logo

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 :root {
     --text-color: #333;
-    --main-color: #63FF6B;
+    --main-color: #2ED07C;
 }
 
 img {
@@ -56,7 +56,7 @@ header {
 }
 
 .logo {
-    width: 60px;
+    width: 80px;
 }
 
 .logo img {
